# HTKIS-HyperDisk

./: .clang-format  .gitignore  CMakeLists.txt  README.md  rustfmt.toml
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/blackbox/: blackbox_recorder.cpp  blackbox_types.h
client/boot_agent/: CMakeLists.txt  boot_agent.h  boot_meta.cpp  boot_meta.h  chunk_stream.cpp  com1_logger.cpp  dhcp_client.cpp  http_boot.cpp  integrity_check.cpp  ipxe_chain.cpp  main.cpp
client/common/: CMakeLists.txt  hd_boot_trace.cpp  hd_boot_trace.h  hd_config.cpp  hd_config.h  hd_frame_codec.cpp  hd_frame_codec.h  hd_ipc.cpp  hd_log.cpp  hd_log.h  hd_util.cpp
client/disk_runtime/: CMakeLists.txt  block_io.cpp  disk_runtime.cpp  network_state_machine.cpp  network_state_machine.h  virtual_disk.cpp
client/driver_manager/: CMakeLists.txt  driver_manager.cpp  driver_matcher.cpp  hw_info_collector.cpp
client/include/: hd_protocol.h
client/overlay_mgr/: CMakeLists.txt  journal_wal.cpp  nvme_overlay.cpp  overlay_mgr.cpp  ram_overlay.cpp  wal_enhanced.cpp  wal_enhanced.h
client/qos_engine/: CMakeLists.txt  priority_queue.cpp  qos_engine.cpp  scheduler.cpp  token_bucket.cpp
client/smart_cache/: CMakeLists.txt  arc_policy.cpp  cache_policy.cpp  l1_ram_cache.cpp  l2_nvme_cache.cpp  smart_cache.cpp  w_tinylfu.cpp  w_tinylfu.h
client/update_agent/: CMakeLists.txt  delta_sync.cpp  update_agent.cpp  version_mgr.cpp
config/: clickhouse_schema.sql  schema.sql
deploy/ansible/: site.yml
deploy/ansible/roles/hd_env/tasks/: main.yml
deploy/console/: index.html
deploy/dnsmasq/: dnsmasq.conf
deploy/docker/: Dockerfile.rust  Dockerfile.server
deploy/network/: setup-vlans.sh
deploy/pxe/: dnsmasq_debian.conf
deploy/pxe/boot/: BCD_clean  BCD_testsign  autoexec.ipxe  create_bcd_testsign.bat  default.ipxe  htkis_testsign.cer  htkis_testsign.pfx  mac_template.ipxe  modify_bcd_admin.bat  wimboot  winpeshl.ini
deploy/scripts/: alpha_a_loop_test.bat  alpha_a_pxe_monitor.sh  boot_test_monitor.py  copy_bootwim_remote.py  copy_bootwim_v2.py  copy_bootwim_v3.py  create_bcd.py  create_bcd_clean.py  create_bcd_pxe.py  create_bcd_wds.py  customize_wim.py  deploy_gateway.py  deploy_pxe.sh  enum_bcd.py  extract_bootwim_remote.py  inject_b1_drivers.py  inject_boot_agent.py  install_adk_winpe.ps1  install_winpe_adk.ps1  test_mount_wim.py  upload_and_build_gateway.py
deploy/systemd/: hyperdisk-gateway.service  hyperdisk-imageserver.service  hyperdisk-metacenter.service
deploy/wireshark/: hdxb_dissector.lua
docs/: alpha-b-battle-plan.md  deployment.md  operations.md  usage.md
driver/: CMakeLists.txt  build_drivers.bat  build_drivers.py  build_storport.bat  sign_drivers.bat  wdk-toolchain.cmake
driver/blk/: CMakeLists.txt  HyperDiskBlk.inf  blk_7b_recovery.c  blk_7b_recovery.h  blk_cc_mm_sync.c  blk_driver.c  blk_driver.h  blk_fastio.c  blk_io.c  blk_ioctl.c  blk_irp_tracker.c  blk_pool.c  blk_request.c  pnp_disk_driver.c  pnp_disk_driver.h  storport_driver.c  storport_driver.h  wdm_disk_driver.c  wdm_disk_driver.h
driver/bus/: CMakeLists.txt  HyperDiskBus.inf  bus_child.c  bus_driver.c  bus_driver.h  bus_ioctl.c  bus_pnp.c
driver/cache/: HyperCache.inf  cache_driver.c  cache_driver.h  cache_entry.c
driver/common/: CMakeLists.txt  hd_common.h  hd_debug.c  hd_lock.c  hd_memory.c  hd_registry.c  hd_serial.c  hd_serial.h
driver/include/: hd_driver_ioctl.h
driver/net/: CMakeLists.txt  HyperNet.inf  net_connect.c  net_driver.c  net_driver.h  net_frame.c  net_heartbeat.c  net_wsk.c
driver/overlay/: HyperOverlay.inf  overlay_driver.c  overlay_driver.h  overlay_entry.c
proto/: dna.proto  metadata.proto  update.proto
server/: CMakeLists.txt  Cargo.toml
server/ai_engine/: CMakeLists.txt  access_collector.cpp  ai_service.cpp  hotblock_rank.cpp  prefetch_scheduler.cpp
server/api_gateway/: Cargo.toml
server/api_gateway/src/: main.rs
server/cache_engine/: CMakeLists.txt  arc_policy.cpp  cache_service.cpp  io_scheduler.cpp  l3_ssd_cache.cpp  l3_ssd_cache.h  main.cpp
server/common/: Cargo.toml
server/common/src/: config.rs  error.rs  lib.rs  types.rs
server/dna_service/: Cargo.toml  build.rs
server/dna_service/src/: main.rs
server/dpdk_gateway/: CMakeLists.txt  frame_parser.cpp  gateway.cpp  packet_processor.cpp  rss_hash.cpp  tls_terminator.cpp
server/image_server/: CMakeLists.txt  block_handler.cpp  chunk_index.cpp  grpc_service.cpp  image_service.cpp  image_service.h  io_engine.cpp  main.cpp
server/metadata_center/: Cargo.toml  build.rs
server/metadata_center/src/: main.rs  store.rs
server/update_service/: Cargo.toml  build.rs
server/update_service/src/: main.rs
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_frame_codec.cpp  test_protocol.cpp
tools/: CMakeLists.txt  build_dl.py  build_ld.py  hd_dl.c  hd_ld.c
tools/blackbox_analyzer/: CMakeLists.txt  main.cpp
tools/bootdiag/: CMakeLists.txt  bootdiag.h  bootdiag_checks.c  main.c
tools/mini_image/: build_mini_image.ps1
tools/replay_recorder/: CMakeLists.txt  replay_analyzer_main.cpp  replay_recorder.cpp  replay_recorder.h
