[package]
name = "hd-metadata-center"
version.workspace = true
edition.workspace = true

[dependencies]
hd-common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
