[package]
name = "hd-update-service"
version.workspace = true
edition.workspace = true

[dependencies]
hd-common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
